--- a/src/screens/lista_productos.html
+++ b/src/screens/lista_productos.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../../public/build/css/app.css">
+    <link rel="stylesheet" href="./../../public/build/css/app.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shorcut icon" href="../../public/build/img/control.png" />
+    <link rel="shorcut icon" href="./../../public/build/img/control.png" />
     <title>AuraGeek</title>
 </head>
 
 <body>
         <header class="header" > 
             <div class="contenido-header">                
-                <a href="../../index.html"><img class="logo" src="../../public/build/img/Logo.png" alt="Logo"></a>
+                <a href="./../../index.html"><img class="logo" src="./../../public/build/img/Logo.png" alt="Logo"></a>
 
                 <div class="input-container input-wrapper">
                     <input id="buscador" class="buscador" type="search" value="" placeholder="¿Que desea buscar?">
@@ -50,8 +50,8 @@
             </footer>
         </main>
     <!-- <script type="module" src="../../public/build/js/bundle.min.js"></script> -->
-    <script type="module" src="../js/productControllers.js"></script>
-    <script type="module" src="/src/js/busqueda.js"></script>
+    <script type="module" src="./../js/productControllers.js"></script>
+    <script type="module" src="./../js/busqueda.js"></script>
 </body>
 </html>
 
