--- a/src/screens/start-wars.html
+++ b/src/screens/start-wars.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../../public/build/css/app.css">
+    <link rel="stylesheet" href="./../../public/build/css/app.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shorcut icon" href="../../public/build/img/control.png" />
+    <link rel="shorcut icon" href="./../../public/build/img/control.png" />
     <title>AuraGeek</title>
 </head>
 
@@ -14,7 +14,7 @@
         <header class="header" > 
             <div class="contenido-header">
                 
-                    <a href="../../index.html"><img class="logo" src="../../public/build/img/Logo.png" alt="Logo"></a>
+                    <a href="./../../index.html"><img class="logo" src="./../../public/build/img/Logo.png" alt="Logo"></a>
 
                 <div class="input-wrapper">
                     <input class="buscador" type="search" value="" placeholder="¿Que desea buscar?">
@@ -31,7 +31,7 @@
         <main class="contenedor-principal">
 
             <div class="carta-grande">
-                <img src="../../public/build/img/1.png"/> 
+                <img src="./../../public/build/img/1.png"/> 
                 <div class="carta-grande_contenido">
                     <p>Producto XYZ</p>
                     <strong><p>$60.00</p></strong> 
@@ -48,7 +48,7 @@
                                             <!-- FORMULARIO -->
         <section class="contacto">
 
-            <a href="../../index.html"><img class="logo" src="../../public/build/img/Logo.png" alt="Logo"></a>
+            <a href="./../../index.html"><img class="logo" src="./../../public/build/img/Logo.png" alt="Logo"></a>
             
                 <div class="quienes-somos">
                     <a class="links">Quienes somos</a>
@@ -92,7 +92,7 @@
                     </script> 
             </footer>
         </main>
-    <script type="module" src="../../public/build/js/bundle.min.js"></script>
-    <script type="module" src="/src/js/mostrarProducto.js"></script>
+    <script type="module" src="./../../public/build/js/bundle.min.js"></script>
+    <script type="module" src="./../js/mostrarProducto.js"></script>
 </body>
 </html>
