--- a/src/screens/agregar.html
+++ b/src/screens/agregar.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../../public/build/css/app.css">
+    <link rel="stylesheet" href="./../../public/build/css/app.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shorcut icon" href="../../public/build/img/control.png" />
+    <link rel="shorcut icon" href="./../../public/build/img/control.png" />
     <title>AuraGeek</title>
 </head>
 
 <body>
         <header class="header" > 
             <div class="contenido-header">                
-                <a href="../../index.html"><img class="logo" src="../../public/build/img/Logo.png" alt="Logo"></a>
+                <a href="./../../index.html"><img class="logo" src="./../../public/build/img/Logo.png" alt="Logo"></a>
 
                 <div class="input-container input-wrapper">
                     <input id="buscador" class="buscador" type="search" value="" placeholder="¿Que desea buscar?">
@@ -29,7 +29,7 @@
 
         <main class="contenedor-principal">
 
-            <form action="/src/screens/lista_productos.html" class="formulario-login flex flex--column" data-form >
+            <form action="./lista_productos.html" class="formulario-login flex flex--column" data-form >
                 <h2 id="contacto" class="card__title-login">Agregar nuevo producto</h2>
 
                     <div class="input-container">
@@ -85,8 +85,8 @@
         </main>
     <!-- <script type="module" src="../../public/build/js/bundle.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" referrerpolicy="no-referrer"></script>
-    <script type="module" src="/src/js/registroControllers.js"></script>
-    <script type="module" src="/src/js/input.js"></script>
+    <script type="module" src="./../js/registroControllers.js"></script>
+    <script type="module" src="./../js/input.js"></script>
     <!-- <script type="module" src="/src/js/validacion.js"></script> -->
 
 </body>
