--- a/src/screens/diversos.html
+++ b/src/screens/diversos.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../../public/build/css/app.css">
+    <link rel="stylesheet" href="./../../public/build/css/app.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shorcut icon" href="../../public/build/img/control.png" />
+    <link rel="shorcut icon" href="./../../public/build/img/control.png" />
     <title>AuraGeek</title>
 </head>
 
 <body>
         <header class="header" > 
             <div class="contenido-header">                
-                <a href="../../index.html"><img class="logo" src="../../public/build/img/Logo.png" alt="Logo"></a>
+                <a href="./../../index.html"><img class="logo" src="./../../public/build/img/Logo.png" alt="Logo"></a>
 
                 <div class="input-container input-wrapper">
                     <input id="buscador" class="buscador" type="search" value="" placeholder="¿Que desea buscar?">
@@ -38,7 +38,7 @@
                 </div>  
             </div>
                                 <!-- Seccion de Diversos-->
-                <div class="titulos"><h3>Productos similares</h3> <a href="/src/screens/productos.html" class="vinculo">Ver todo -></a></div>  
+                <div class="titulos"><h3>Productos similares</h3> <a href="./productos.html" class="vinculo">Ver todo -></a></div>  
             <section id="cartas" class="cartas">
             </section>
 
@@ -49,7 +49,7 @@
                                         <!-- FORMULARIO -->
         <section class="contacto">
 
-                <a href="/index.html"><img class="logo" src="/public/build/img/Logo.png" alt="Logo"></a>
+                <a href="./../../index.html"><img class="logo" src="./../../public/build/img/Logo.png" alt="Logo"></a>
                 
                     <div class="quienes-somos">
                         <a class="links">Quienes somos</a>
@@ -93,7 +93,7 @@
             </footer>
         </main>
     <!-- <script type="module" src="/public/build/js/bundle.min.js"></script> -->
-    <script type="module" src="/src/js/busqueda.js"></script>
-    <script type="module" src="/src/js/detallesProducto.js"></script>
+    <script type="module" src="./../js/busqueda.js"></script>
+    <script type="module" src="./../js/detallesProducto.js"></script>
 </body>
 </html>
