--- a/src/screens/error.html
+++ b/src/screens/error.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../../public/build/css/app.css">
+    <link rel="stylesheet" href="./../../public/build/css/app.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shorcut icon" href="../../public/build/img/control.png" />
+    <link rel="shorcut icon" href="./../../public/build/img/control.png" />
     <title>AuraGeek</title>
 </head>
 
 <body>
         <header class="header" > 
             <div class="contenido-header">                
-                <a href="../../index.html"><img class="logo" src="../../public/build/img/Logo.png" alt="Logo"></a>
+                <a href="./../../index.html"><img class="logo" src="./../../public/build/img/Logo.png" alt="Logo"></a>
 
                 <div class="input-wrapper">
                     <input class="buscador" type="search" value="" placeholder="¿Que desea buscar?">
@@ -31,14 +31,14 @@
                         <h1 >
                             ¡Error! No se pudo completar el procedimiento.
                         </h1>
-                        <a href="../../index.html" class="button">Inicio</a>
+                        <a href="./../../index.html" class="button">Inicio</a>
                 </div>
                 
 
                                         <!-- FORMULARIO -->
         <section class="contacto">
 
-                <a href="../../index.html"><img class="logo" src="../../public/build/img/Logo.png" alt="Logo"></a>
+                <a href="./../../index.html"><img class="logo" src="./../../public/build/img/Logo.png" alt="Logo"></a>
                 
                     <div class="quienes-somos">
                         <a class="links">Quienes somos</a>
@@ -81,7 +81,6 @@
                     </script> 
             </footer>
         </main>
-    <script type="module" src="../../public/build/js/bundle.min.js"></script>
-    <!-- <script src="./src/js/app.js"></script> -->
+    <script type="module" src="./../../public/build/js/bundle.min.js"></script>
 </body>
 </html>
