--- a/src/screens/login.html
+++ b/src/screens/login.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="stylesheet" href="../../public/build/css/app.css">
+    <link rel="stylesheet" href="./../../public/build/css/app.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shorcut icon" href="../../public/build/img/control.png" />
+    <link rel="shorcut icon" href="./../../public/build/img/control.png" />
     <title>AuraGeek</title>
 </head>
 
 <body>
         <header class="header" > 
             <div class="contenido-header">                
-                <a href="../../index.html"><img class="logo" src="../../public/build/img/Logo.png" alt="Logo"></a>
+                <a href="./../../index.html"><img class="logo" src="./../../public/build/img/Logo.png" alt="Logo"></a>
 
                 <div class="input-wrapper">
                     <input class="buscador" type="search" value="" placeholder="¿Que desea buscar?">
@@ -48,7 +48,7 @@
                                         <!-- FORMULARIO -->
         <section class="contacto">
 
-                <a href="../../index.html"><img class="logo" src="../../public/build/img/Logo.png" alt="Logo"></a>
+                <a href="./../../index.html"><img class="logo" src="./../../public/build/img/Logo.png" alt="Logo"></a>
                 
                     <div class="quienes-somos">
                         <a class="links">Quienes somos</a>
@@ -91,7 +91,7 @@
                     </script> 
             </footer>
         </main>
-    <script type="module" src="../../public/build/js/bundle.min.js"></script>
-    <script type="module" src="../js/validacionLogin.js"></script>
+    <script type="module" src="./../../public/build/js/bundle.min.js"></script>
+    <script type="module" src="./../js/validacionLogin.js"></script>
 </body>
 </html>
